--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.btn{
+  position:fixed;
+  top: 50px;
+  height:100px; width:100px;
+  border-radius: 50%;
+  z-index:999;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
